--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Alexandros Tsieris</title>
   </head>
   <body>
-
+<ul>
+  <li>Angular.js</li>
+  <li>jQuery</li>
+  <li>Node.js</li>
+  <li>PHP</li>
+</ul>
   </body>
 </html>
