--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Alexandros Tsieris</title>
   </head>
   <body>
-  <h1>Hello, Code School</h1>
+  <h1>Hello, Code School!</h1>
 <ul>
   <li>Angular.js</li>
   <li>jQuery</li>
